--- a/main-files/dashboard/index.html
+++ b/main-files/dashboard/index.html
@@ -944,7 +944,259 @@
          </div>
 
          <!-- right right sidebar -->
-         <div class="right-sidebar d-none d-xl-block"></div>
+         <aside class="right-sidebar">
+            <div
+               class="right-sidebar-header d-flex align-items-center justify-content-between"
+            >
+               <h5>Notification</h5>
+               <div class="d-flex align-items-center gap-3">
+                  <button class="filter-button">
+                     Today
+                     <i class="fa-sharp fa-solid fa-chevron-up ms-2"></i>
+                  </button>
+                  <button>
+                     <i
+                        class="fa-sharp fa-solid fa-arrow-right color-primary"
+                     ></i>
+                  </button>
+               </div>
+            </div>
+
+            <div class="right-sidebar-notifications">
+               <ul class="d-flex flex-column gap-3">
+                  <li>
+                     <a href="#" class="d-flex gap-2">
+                        <span class="notification-icon">
+                           <i class="fa-light fa-bell"></i>
+                        </span>
+                        <div class="notification-content">
+                           <span>New user register</span>
+                           <p>David John just register from New York</p>
+                        </div>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a href="#" class="d-flex gap-2">
+                        <span class="notification-icon">
+                           <i class="fa-light fa-bell"></i>
+                        </span>
+                        <div class="notification-content">
+                           <span>New order placed</span>
+                           <p>
+                              New order received! Click here to view and process
+                              the order.
+                           </p>
+                        </div>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a href="#" class="d-flex gap-2">
+                        <span class="notification-icon">
+                           <i class="fa-light fa-bell"></i>
+                        </span>
+                        <div class="notification-content">
+                           <span>Payment processed successfully</span>
+                           <p>
+                              Michael Williams just made a payment from Chicago
+                           </p>
+                        </div>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a href="#" class="d-flex gap-2">
+                        <span class="notification-icon">
+                           <i class="fa-light fa-bell"></i>
+                        </span>
+                        <div class="notification-content">
+                           <span>New article published </span>
+                           <p>
+                              Sarah Davis just published a new article from San
+                              Francisco
+                           </p>
+                        </div>
+                     </a>
+                  </li>
+
+                  <li>
+                     <button class="notification-see-all-btn">See all</button>
+                  </li>
+               </ul>
+            </div>
+
+            <hr style="margin: 24px 0px; background-color: #f5f6f7" />
+
+            <div class="right-sidebar-recent-events">
+               <div class="recent-events-header">
+                  <h5>Recent Events</h5>
+                  <button class="filter-button">
+                     Descending
+                     <i class="fa-sharp fa-solid fa-chevron-up ms-2"></i>
+                  </button>
+               </div>
+
+               <div class="recent-events-list">
+                  <ul class="d-grid gap-2">
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>New York</span>
+                           <span>49%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 49%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>San Francisco</span>
+                           <span>25%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 25%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>Tokyo</span>
+                           <span>10%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 10%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>London</span>
+                           <span>5%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 5%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>Paris</span>
+                           <span>4%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 4%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>Sydney</span>
+                           <span>3%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 3%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>Berlin</span>
+                           <span>2%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 2%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>Shanghai</span>
+                           <span>2%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 2%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <button>Sell all</button>
+                     </li>
+                  </ul>
+               </div>
+            </div>
+         </aside>
       </main>
 
       <!--<< All JS Plugins >>-->
