--- a/main-files/dashboard/test.html
+++ b/main-files/dashboard/test.html
@@ -26,225 +26,259 @@
       <!--<< Main.css >>-->
       <link rel="stylesheet" href="assets/css/main.css" />
    </head>
-   <body>
+   <body style="height: 1200vh">
       <main class="h-100">
-         <aside class="left-sidebar">
-            <div class="logo d-flex align-items-center justify-content-between">
-               <a href="index.html">
-                  <img src="assets/images/logo.png" alt="RevAuto" />
-               </a>
-               <button>
-                  <i class="fa-sharp fa-solid fa-angles-left color-primary"></i>
-               </button>
+         <aside class="right-sidebar">
+            <div
+               class="right-sidebar-header d-flex align-items-center justify-content-between"
+            >
+               <h5>Notification</h5>
+               <div class="d-flex align-items-center gap-3">
+                  <button class="filter-button">
+                     Today
+                     <i class="fa-sharp fa-solid fa-chevron-up ms-2"></i>
+                  </button>
+                  <button>
+                     <i
+                        class="fa-sharp fa-solid fa-arrow-right color-primary"
+                     ></i>
+                  </button>
+               </div>
             </div>
 
-            <div class="left-sidebar-list-container">
-               <ul class="d-flex flex-column gap-2">
+            <div class="right-sidebar-notifications">
+               <ul class="d-flex flex-column gap-3">
                   <li>
-                     <a
-                        href="index.html"
-                        class="active d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i class="fa-solid fa-grid-2 color-primary"></i>
-                           <span>Overview</span>
+                     <a href="#" class="d-flex gap-2">
+                        <span class="notification-icon">
+                           <i class="fa-light fa-bell"></i>
+                        </span>
+                        <div class="notification-content">
+                           <span>New user register</span>
+                           <p>David John just register from New York</p>
                         </div>
-                        <i class="fa-sharp fa-solid fa-chevron-up"></i>
                      </a>
                   </li>
 
                   <li>
-                     <a
-                        data-bs-toggle="collapse"
-                        href="#collapseProducts"
-                        role="button"
-                        class="d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i
-                              class="fa-sharp fa-light fa-bag-shopping color-primary"
-                           ></i>
-                           <span>Products</span>
+                     <a href="#" class="d-flex gap-2">
+                        <span class="notification-icon">
+                           <i class="fa-light fa-bell"></i>
+                        </span>
+                        <div class="notification-content">
+                           <span>New order placed</span>
+                           <p>
+                              New order received! Click here to view and process
+                              the order.
+                           </p>
                         </div>
-                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                     </a>
-
-                     <!-- collapse 1 -->
-                     <div
-                        class="collapse collapsed-items"
-                        id="collapseProducts"
-                     >
-                        <ul class="d-flex flex-column">
-                           <li>
-                              <a href="#">Create With AI</a>
-                           </li>
-                           <li>
-                              <a href="#" class="active-sublist">Create New</a>
-                           </li>
-                           <li>
-                              <a href="#">View All</a>
-                           </li>
-                           <li>
-                              <a href="#">Products Images</a>
-                           </li>
-                        </ul>
-                     </div>
-                  </li>
-
-                  <li>
-                     <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i
-                              class="fa-light fa-user fa-sharp color-primary"
-                           ></i>
-                           <span>Customers</span>
-                        </div>
-                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
                      </a>
                   </li>
 
                   <li>
-                     <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i
-                              class="fa-regular fa-square-list color-primary"
-                           ></i>
-                           <span>Orders</span>
+                     <a href="#" class="d-flex gap-2">
+                        <span class="notification-icon">
+                           <i class="fa-light fa-bell"></i>
+                        </span>
+                        <div class="notification-content">
+                           <span>Payment processed successfully</span>
+                           <p>
+                              Michael Williams just made a payment from Chicago
+                           </p>
                         </div>
-                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
                      </a>
                   </li>
 
                   <li>
-                     <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i
-                              class="fa-light fa-bags-shopping color-primary"
-                           ></i>
-                           <span>Checkout</span>
+                     <a href="#" class="d-flex gap-2">
+                        <span class="notification-icon">
+                           <i class="fa-light fa-bell"></i>
+                        </span>
+                        <div class="notification-content">
+                           <span>New article published </span>
+                           <p>
+                              Sarah Davis just published a new article from San
+                              Francisco
+                           </p>
                         </div>
-                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
                      </a>
                   </li>
 
                   <li>
-                     <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i class="fa-solid fa-chart-mixed color-primary"></i>
-                           <span>Analytics</span>
-                        </div>
-                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                     </a>
-                  </li>
-
-                  <li>
-                     <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i class="fa-light fa-truck-fast color-primary"></i>
-                           <span>Shipping</span>
-                        </div>
-                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                     </a>
-                  </li>
-
-                  <li>
-                     <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i class="fa-light fa-speaker color-primary"></i>
-                           <span>Promotions</span>
-                        </div>
-                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                     </a>
-                  </li>
-
-                  <li>
-                     <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i
-                              class="fa-regular fa-sack-dollar color-primary"
-                           ></i>
-                           <span>Shipping</span>
-                        </div>
-                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                     </a>
-                  </li>
-
-                  <li>
-                     <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i
-                              class="fa-regular fa-user-headset color-primary"
-                           ></i>
-                           <span>Supports</span>
-                        </div>
-                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                     </a>
-                  </li>
-
-                  <li>
-                     <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i
-                              class="fa-sharp fa-light fa-comments-question-check color-primary"
-                           ></i>
-                           <span>Feedback</span>
-                        </div>
-                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                     </a>
-                  </li>
-
-                  <li>
-                     <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-between"
-                     >
-                        <div class="before d-none"></div>
-                        <div class="d-flex align-items-center gap-2">
-                           <i class="fa-regular fa-gear color-primary"></i>
-                           <span>Settings</span>
-                        </div>
-                        <i class="fa-sharp fa-solid fa-chevron-down"></i>
-                     </a>
+                     <button class="notification-see-all-btn">See all</button>
                   </li>
                </ul>
+            </div>
+
+            <hr style="margin: 24px 0px; background-color: #f5f6f7" />
+
+            <div class="right-sidebar-recent-events">
+               <div class="recent-events-header">
+                  <h5>Recent Events</h5>
+                  <button class="filter-button">
+                     Descending
+                     <i class="fa-sharp fa-solid fa-chevron-up ms-2"></i>
+                  </button>
+               </div>
+
+               <div class="recent-events-list">
+                  <ul class="d-grid gap-2">
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>New York</span>
+                           <span>49%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 49%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>San Francisco</span>
+                           <span>25%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 25%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>Tokyo</span>
+                           <span>10%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 10%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>London</span>
+                           <span>5%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 5%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>Paris</span>
+                           <span>4%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 4%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>Sydney</span>
+                           <span>3%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 3%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>Berlin</span>
+                           <span>2%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 2%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <div
+                           class="recent-events-item d-flex align-items-center justify-content-between"
+                        >
+                           <span>Shanghai</span>
+                           <span>2%</span>
+                        </div>
+                        <div
+                           class="progress"
+                           style="background: #ecf1ff"
+                           role="progressbar"
+                        >
+                           <div
+                              class="progress-bar h-100"
+                              style="width: 2%; background: var(--theme)"
+                           ></div>
+                        </div>
+                     </li>
+
+                     <li>
+                        <button>Sell all</button>
+                     </li>
+                  </ul>
+               </div>
             </div>
          </aside>
       </main>
